# whisper-toggle

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  audio_test_standalone.py  check-ydotool.sh  config.py  demo_standalone.py  install-simple.sh  install.sh  keyboard_monitor_gtk.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run-gui.sh  run.sh  setup-ubuntu.sh  smart_audio_device.py  toggle.sh  transcriber_simple.py  wayland_keyboard.py  whisper-toggle-simple.py  whisper-toggle.desktop  whisper-toggle.py  whisper_toggle_gui.py
.github/workflows/: test.yml
scripts/: install.sh  test_audio_devices.py  whisper-control.sh
service/: whisper-service.sh  whisper-toggle.service
src/: whisper_toggle_basic.py
tests/: __init__.py  test_basic.py
whisper_toggle/: __init__.py  __main__.py  app.py  audio_test.py  config.py  gui.py  main.py  tray.py
